# tefasmak

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tefasmak/: __init__.py  api.py
