[project]
name = "tefasmak"
version = "1.0.0"
description = "TEFAS (Türkiye Elektronik Fon Alım Satım Platformu) için modern Python sarmalayıcısı — Akamai TSPD bypass için curl_cffi TLS impersonation kullanır."
readme = "README.md"
license = { text = "MIT" }
keywords = ["tefas", "fon", "yatirim", "turkey", "finance", "mutual-fund", "etf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: Turkish",
]
requires-python = ">=3.10"
dependencies = [
    "curl_cffi>=0.7.0",
]

[project.optional-dependencies]
# curl_cffi yüklenemediği ortamlar için requests fallback'ini etkinleştir.
requests = ["requests>=2.31.0"]
dev = ["pytest>=7", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/maku-cpu/tefasmak"
Issues = "https://github.com/maku-cpu/tefasmak/issues"
Source = "https://github.com/maku-cpu/tefasmak"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tefasmak"]

[tool.hatch.build.targets.sdist]
include = ["src/tefasmak", "README.md", "LICENSE", "pyproject.toml"]
